--- a/styles/how-to-buy-thermomix.css
+++ b/styles/how-to-buy-thermomix.css
@@ -1,8 +1,4 @@
-form input{
-    margin: auto;
-    display: block;
-    width: 50%;
-}
+
 form{
     margin: auto;
     display: grid;
@@ -15,16 +11,18 @@ form{
     border: 3px dotted #c78bbc;
 }
 form label{
-    font-size: 1.5em;
-    display: inline-block;
-    margin-bottom: 15px;
-    clear: right;
+    position: relative;
+    top: 5%;
+    font-size: 2em;
+    
 }
 form input{
-    display: inline-block;
-    margin-left: auto;
-    
-    height: 1.5em;
+    position: relative;
+    left: 45%;
+    top: 5%;
+    height: 2em;
+    width: 50%;
+    border: 1px solid black;
 }
 .fname{
     grid-column: 1; 
@@ -53,16 +51,37 @@ form input{
 #radio-buttons{
     grid-column: 2;
     grid-row: 3/7;
+    grid-template-rows: repeat(3,1fr);
     
 }
 #radio-buttons li{
     list-style-type: none;
     margin: auto;
 }
+.getitfree{
+    grid-row: 1;
+}
+.onepayment{
+    grid-row: 2;
+}
+.spreadpayments{
+    grid-row: 3;
+}
+
 #submit{
 
     grid-column: 1;
     grid-row: 5/7;
-    height: 75%;
+    height: 60%;
     width: 100%;
+    font-size: 2em;
+    background-color: #69ad58;
+    border: 2px solid black;
+}
+#submit:hover{
+    background-color: aqua;
+}
+#spreadpayments{
+    height: 2em;
+    width: 85%;
 }
