--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -53,6 +53,18 @@ header ul{
 .nav-item a:hover{
     color: #009a3b;
 }
+.text-container p{
+    line-height: 1.6;
+    margin: 10px;
+    grid-column: 1/4;
+    font-size: 30px;
+    grid-row: 2;
+    text-align: center;
+    margin: 50px;
+    border: 3px black dotted;
+    border-radius: 20px;
+    background-color: #eda6e0;
+}
 .footer-container{
     position: absolute;
     display: inline-block;
