added content to how-to-buy-thermomix.html

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -64,7 +64,7 @@ header ul{
     margin: 50px;
     border: 3px black dotted;
     border-radius: 20px;
-    background-color: #eda6e0;
+    background-color: #c9c9c9;
 }
 .footer-container{
     position: absolute;
