--- a/styles/home.css
+++ b/styles/home.css
@@ -4,7 +4,19 @@
     grid-template-rows: auto auto auto auto auto;
     gap:20px;
     
-  }
+}
+.text-container p{
+    line-height: 1.6;
+    margin: 10px;
+    grid-column: 1/4;
+    font-size: 30px;
+    grid-row: 2;
+    text-align: center;
+    margin: 50px;
+    border: 3px black dotted;
+    border-radius: 20px;
+    background-color: #eda6e0;
+}
 .text-container h1{
     position: relative;
     top: 40%;
