--- a/styles/how-to-buy-thermomix.css
+++ b/styles/how-to-buy-thermomix.css
@@ -85,3 +85,25 @@ form input{
     height: 2em;
     width: 85%;
 }
+#text-container video{
+    width: 20%;
+}
+#video-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    margin: 1em;
+    
+}
+#video1{
+    grid-column: 1;
+    grid-row: 1/3;
+    margin-bottom: 10%;
+    
+}
+#video-container p{
+    position: relative;
+    grid-column: 2;
+    font-size: 30px;
+    top:40%;
+}
