--- a/styles/how-to-buy-thermomix.css
+++ b/styles/how-to-buy-thermomix.css
@@ -49,49 +49,58 @@ form input{
     grid-row: 3;
 }
 #radio-buttons{
+    display: grid;
     grid-column: 2;
     grid-row: 3/7;
     grid-template-rows: 1fr 1fr 2fr 1fr;
 }
 .getitfreeinput{
     grid-row: 1;
+    grid-column: 1;
     position: relative;
-    left: 0%;
+    left: 0;
     width: 10%;
+
 
 }
 .getitfreelabel{
+    position: relative;
     grid-row: 1;
-    left: 3%;
+    grid-column: 1;
+    width: 100%;
+
+    left: 5vw;
 }
 .onepaymentinput{
     grid-row: 2;
+    grid-column: 1;
     position: relative;
-    left: 0%;
+    left: 0;
     width: 10%;
-    margin-bottom: ;
 }
 .onepaymentlabel{
+    position: relative;
     grid-row: 2;
-    left: 3%;
-}
-.spreadpayments{
-    
-    grid-row: 3/5;
-    
+    grid-column: 1;
+    width: 100%;
+
+    left: 5vw;
 }
 .spreadpaymentsinput{
+    grid-row: 4;
     position: relative;
-    height: 2em;
+    height: 100%;
     width: 90%;
-    margin-top: 20px;
-    left: 3%;
+    left: 5vw;
+    
     
 }
 .spreadpaymentslabel{
+    margin-top: 1em;
+    grid-row:3;
     position: relative;
     width: 100%;
-    left: 3%;
+    left: 5vw;
     white-space: nowrap;
 }
 #submit{
