fixed form layout

--- a/styles/how-to-buy-thermomix.css
+++ b/styles/how-to-buy-thermomix.css
@@ -87,6 +87,7 @@ form input{
     left: 5vw;
 }
 .spreadpaymentsinput{
+    text-align: center;
     grid-row: 4;
     position: relative;
     height: 100%;
