--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,6 +1,14 @@
 p{
     font-family: Arial, Helvetica, sans-serif;
 }
+h2{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: normal;
+    font-size: 50px;
+    
+
+}
 body{
     margin: 0;
     position: relative;
@@ -53,6 +61,12 @@ header ul{
 .nav-item a:hover{
     color: #009a3b;
 }
+.text-container{
+    border: 3px black dotted;
+    border-radius: 20px;
+    background-color: #c9c9c9;
+    margin: 10px;
+}
 .text-container p{
     line-height: 1.6;
     margin: 10px;
@@ -61,10 +75,9 @@ header ul{
     grid-row: 2;
     text-align: center;
     margin: 50px;
-    border: 3px black dotted;
-    border-radius: 20px;
-    background-color: #c9c9c9;
+
 }
+
 .footer-container{
     position: absolute;
     display: inline-block;
