--- a/styles/how-to-buy-thermomix.css
+++ b/styles/how-to-buy-thermomix.css
@@ -20,7 +20,7 @@ form input{
     position: relative;
     left: 45%;
     top: 5%;
-    height: 2em;
+    height: min(4vh,35px);
     width: 50%;
     border: 1px solid black;
 }
