--- a/styles/what-is-thermomix.css
+++ b/styles/what-is-thermomix.css
@@ -20,6 +20,11 @@
     border-radius: 25%;
     margin: 0.5em;
 }
+#image2{
+    float: right;
+    width:30vw;
+    margin: 15px;
+}
 h2{
     color: darkorchid;
     -webkit-text-stroke-width: 1px;
