--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -35,6 +35,7 @@ header ul{
     list-style-type: none;
     display: inline-block;
     margin: 10px;
+    font-size: 1.5em;
 }
 .header-item a{
     text-decoration: none;
@@ -53,7 +54,7 @@ header ul{
 .nav-item{
     display: inline-block;
     list-style-type: none;
-    font-size: 20px;
+    font-size: 2em;
     padding: 0;
     margin: 10px;
 }
@@ -94,6 +95,7 @@ header ul{
     list-style-type: none;
     display: inline-block;
     margin: 10px;
+    font-size: 1.5em;
 }
 .footer-item a{
     text-decoration: none;
