--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -34,7 +34,8 @@ header ul{
 .header-item{
     list-style-type: none;
     display: inline-block;
-    margin: 10px;
+    margin-inline: 1em;
+    margin-top: 15px;
     font-size: 1.5em;
 }
 .header-item a{
@@ -94,8 +95,10 @@ header ul{
 .footer-item{
     list-style-type: none;
     display: inline-block;
-    margin: 10px;
+    margin-inline: 1em;
+    margin-top: 15px;
     font-size: 1.5em;
+    
 }
 .footer-item a{
     text-decoration: none;
