--- a/styles/get-thermomix-for-free.css
+++ b/styles/get-thermomix-for-free.css
@@ -1,24 +1,8 @@
-#video-container{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+#video1{
+    float: right;
+    width: 25vw;
     margin: 1em;
     
-}
-#video1{
-    position: relative;
-    left: 35vw;
-    width: 30vw;
-    grid-column: 1;
-    grid-row: 1/3;
-    margin-bottom: 10%;
-    
-}
-#video-container p{
-    position: relative;
-    grid-column: 2;
-    font-size: 30px;
-    top:40%;
 }
 form{
     margin: auto;
