--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -12,6 +12,13 @@ h2{
     
 
 }
+h1
+{
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    font-weight: normal;
+    font-size: 50px;
+}
 body{
     margin: 0;
     position: relative;
@@ -64,7 +71,7 @@ header ul{
     color:black;
 }
 .nav-item a:hover{
-    color: #009a3b;
+    color: gray;
 }
 .text-container{
     border: 3px black dotted;
