--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -9,6 +9,7 @@ h2{
     text-align: center;
     font-weight: normal;
     font-size: 60px;
+    font-weight: bold;
     
 
 }
@@ -18,6 +19,7 @@ h1
     text-align: center;
     font-weight: normal;
     font-size: 60px;
+    font-weight: bold;
 }
 body{
     margin: 0;
